--- a/examples/5-VideoControllerWithJpa/src/main/sonar-project.properties
+++ b/examples/5-VideoControllerWithJpa/src/main/sonar-project.properties
@@ -1,6 +1,4 @@
-sonar.projectkey=MyAgenAlex
-
+sonar.projectKey=MyAgenAlex
 sonar.projectName=My Agen Alex
 sonar.sources=.
-sonar.projectKey=1
 sonar.projectVersion=1
